[package]
name = "topmost"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = true
opt-level = "s"

[dependencies]
lazy_static = "1.4"
wchar = "0.6"

[dependencies.winapi]
version = "0.3"
features = [
    "std",
    "winuser",
    "windef",
    "minwindef",
    "stringapiset",
    "winnls",
    "shellapi",
    "winver",
    "errhandlingapi",
    "libloaderapi",
    "wingdi",
    "commctrl",
    "processthreadsapi"
]

[build-dependencies]
embed-resource = "1.6"
